# graphics-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/scenes/: alternate.scene.json  basic.scene.json  scene_config.json
assets/shaders/: lightSource.fs  lightSource.vs  lightTarget.fs  lightTarget.vs  shadowDepth.fs  shadowDepth.gs  shadowDepth.vs  text.vs  wildMath.fs  wildMath.vs
src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  CameraRouteController.cpp  CameraRouteController.h  Config.h  GpuMesh.cpp  GpuMesh.h  InputManager.cpp  InputManager.h  InstanceBuffer.cpp  InstanceBuffer.h  MeshData.cpp  MeshData.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneConfigLoader.cpp  SceneConfigLoader.h  SceneDefinition.h  SceneDefinitions.cpp  SceneDefinitions.h  SceneOverlayRenderer.cpp  SceneOverlayRenderer.h  ScenePlaylist.cpp  ScenePlaylist.h  Shader.cpp  Shader.h  ShadowManager.cpp  ShadowManager.h  TextManager.cpp  TextManager.h  TextureManager.h  TimeState.cpp  (+4 more)
